--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Title</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <!-- Require jQuery -->
-  <script type="text/javascript" src="app.js"></script>
-</head>
-<body>
-  <!-- HTML Body -->
-  <h1>Tic Tac Toe</h1>
-  <img src="http://www.cs.utah.edu/~gk/atwork/img/hevequip2.gif" alt="under construction"></img>
-  <!-- Tic Tac Toe Board here -->
-  <!-- Reset button -->
-</body>
-</html>
+<table id="game" border="1" cellpadding="5">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src='ttt-jq-refactor.js'></script>
+    <link href="style.css" rel="stylesheet">
+    <tbody>
+        <tr>
+            <td id="box0"class='box'></td>
+            <td id="box1"class='box'></td>
+            <td id="box2"class='box'></td>
+        </tr>
+        <tr>
+            <td id="box3"class='box'></td>
+            <td id="box4"class='box'></td>
+            <td id="box5"class='box'></td>
+        </tr>
+        <tr>
+            <td id="box6"class='box'></td>
+            <td id="box7"class='box'></td>
+            <td id="box8"class='box'></td>
+        </tr>
+    </tbody>
+</table>
+<button id="clear" class="medium-size" >Clear Board</button>
+
