--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <table id="game" border="1" cellpadding="5">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src='ttt-jq-refactor.js'></script>
+    <script src='app.js'></script>
     <link href="style.css" rel="stylesheet">
     <tbody>
+        <form id="totals">
+        <input class="form" type="text" id="sumO" value="">
+        <input class="form" type="text" id="sumX" value="">
+        </form>
         <tr>
             <td id="box0"class='box'></td>
             <td id="box1"class='box'></td>
@@ -21,4 +25,5 @@
     </tbody>
 </table>
 <button id="clear" class="medium-size" >Clear Board</button>
+
 
