added first to five winner

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link href="style.css" rel="stylesheet">
     <tbody>
         <form id="totals">
-        <input class="form" type="text" id="sumO" value="">
-        <input class="form" type="text" id="sumX" value="">
+        <input class="form" type="text" id="sumO" value="total   ">
+        <input class="form" type="text" id="sumX" value="total   ">
         </form>
         <tr>
             <td id="box0"class='box'></td>
